@@ -214,6 +214,8 @@ def reference_common_license(para):
         return
     if para.comment is not None and COMMON_LICENSES_DIR in para.comment:
         return
+    if 'X-Comment' in para and COMMON_LICENSES_DIR in para['X-Comment']:
+        return
     para.license = License(
         license.synopsis, license.text + '\n\n' + debian_file_reference(
             FULL_LICENSE_NAME.get(common_license, common_license),
