@@ -1,0 +1,8 @@
+Format: https://www.debian.org/doc/packaging-manuals/copyright-format/1.0/
+Upstream-Name: lintrian
+
+Files: *
+Copyright:
+ 2008-2017 Somebody
+License: GPL-2+
+X-Comment: blah
