@@ -1,0 +1,2 @@
+Fix field name typo in debian/copyright (X-Comment => Comment).
+Fixed-Lintian-Tags: field-name-typo-in-dep5-copyright
